--- a/Mini-Project.html
+++ b/Mini-Project.html
@@ -24,16 +24,16 @@
         <div class="selection">
             <form action="#">
                 <input name = "answer" type="radio" id="option1">
-                <label for = "option1 ">Option 1</label>
+                <label for = "option1 "></label>
                 <br>
                 <input name = "answer" type="radio" id="option2">
-                <label for = "option2 ">Option 2</label>
+                <label for = "option2 "></label>
                 <br>
                 <input name = "answer" type="radio" id="option3">
-                <label for = "option3 ">Option 3</label>
+                <label for = "option3 "></label>
                 <br>
                 <input name = "answer" type="radio" id="option4">
-                <label for = "option4 ">Option 4</label>
+                <label for = "option4 "></label>
                 <br>
             </form>
         </div>
