Functionality to Set Question, Check Response

--- a/Mini-Project.html
+++ b/Mini-Project.html
@@ -23,23 +23,24 @@
 
         <div class="selection">
             <form action="#">
-                <input name = "answer" type="radio" id="option1">
-                <label for = "option1 "></label>
+                <input name="answer" type="radio" id="option1">
+                <label for="option1 "></label>
                 <br>
-                <input name = "answer" type="radio" id="option2">
-                <label for = "option2 "></label>
+                <input name="answer" type="radio" id="option2">
+                <label for="option2 "></label>
                 <br>
-                <input name = "answer" type="radio" id="option3">
-                <label for = "option3 "></label>
+                <input name="answer" type="radio" id="option3">
+                <label for="option3 "></label>
                 <br>
-                <input name = "answer" type="radio" id="option4">
-                <label for = "option4 "></label>
+                <input name="answer" type="radio" id="option4">
+                <label for="option4 "></label>
                 <br>
             </form>
         </div>
     </div>
-
     <div class="FormButtons">
+        <h3 id="message">
+        </h3>
         <form action="#">
             <input class="button" id="SubmitButton" type="button" value="Submit">
             <input class="button" id="SkipButton" type="button" value="Skip">
