--- a/Mini-Project.html
+++ b/Mini-Project.html
@@ -38,12 +38,11 @@
             </form>
         </div>
     </div>
+    <h3 id="message"></h3>
     <div class="FormButtons">
-        <h3 id="message">
-        </h3>
         <form action="#">
             <input class="button" id="SubmitButton" type="button" value="Submit">
-            <input class="button" id="SkipButton" type="button" value="Skip">
+            <input class="button" id="SkipButton" type="button" value="Correct Answer">
             <input class="button" id="NextButton" type="button" value="Next Question">
         </form>
     </div>
