added multiple questions

--- a/Mini-Project.html
+++ b/Mini-Project.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="mainDiv">
+    <div id = "mainDiv" class="mainDiv">
         <div class="qImg">
             <img id="QuestionImage" alt="question logo image">
         </div>
@@ -38,8 +38,9 @@
             </form>
         </div>
     </div>
+    <h1 style = "text-align: center;" id = "finish"></h1>
     <h3 id="message"></h3>
-    <div class="FormButtons">
+    <div class="FormButtons" id = "Form">
         <form action="#">
             <input class="button" id="SubmitButton" type="button" value="Submit">
             <input class="button" id="SkipButton" type="button" value="Correct Answer">
