--- a/Mini-Project.html
+++ b/Mini-Project.html
@@ -16,31 +16,79 @@
 </head>
 
 <body>
-    <div id = "mainDiv" class="mainDiv">
+    <div id="mainDiv" class="mainDiv">
         <div class="qImg">
             <img id="QuestionImage" alt="question logo image">
         </div>
 
         <div class="selection">
-            <form action="#">
-                <input name="answer" type="radio" id="option1">
-                <label for="option1 "></label>
-                <br>
-                <input name="answer" type="radio" id="option2">
-                <label for="option2 "></label>
-                <br>
-                <input name="answer" type="radio" id="option3">
-                <label for="option3 "></label>
-                <br>
-                <input name="answer" type="radio" id="option4">
-                <label for="option4 "></label>
-                <br>
-            </form>
+            <div class="continput">
+                <form action="#">
+                    <ul>
+                        <li>
+                            <input name="answer" type="radio" id="option1">
+                            <label for="option1 "></label>
+                            <div class="bullet">
+                                <div class="line zero"></div>
+                                <div class="line one"></div>
+                                <div class="line two"></div>
+                                <div class="line three"></div>
+                                <div class="line four"></div>
+                                <div class="line five"></div>
+                                <div class="line six"></div>
+                                <div class="line seven"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <input name="answer" type="radio" id="option2">
+                            <label for="option2 "></label>
+                            <div class="bullet">
+                                <div class="line zero"></div>
+                                <div class="line one"></div>
+                                <div class="line two"></div>
+                                <div class="line three"></div>
+                                <div class="line four"></div>
+                                <div class="line five"></div>
+                                <div class="line six"></div>
+                                <div class="line seven"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <input name="answer" type="radio" id="option3">
+                            <label for="option3 "></label>
+                            <div class="bullet">
+                                <div class="line zero"></div>
+                                <div class="line one"></div>
+                                <div class="line two"></div>
+                                <div class="line three"></div>
+                                <div class="line four"></div>
+                                <div class="line five"></div>
+                                <div class="line six"></div>
+                                <div class="line seven"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <input name="answer" type="radio" id="option4">
+                            <label for="option4 "></label>
+                            <div class="bullet">
+                                <div class="line zero"></div>
+                                <div class="line one"></div>
+                                <div class="line two"></div>
+                                <div class="line three"></div>
+                                <div class="line four"></div>
+                                <div class="line five"></div>
+                                <div class="line six"></div>
+                                <div class="line seven"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </form>
+            </div>
         </div>
     </div>
-    <h1 style = "text-align: center;" id = "finish"></h1>
+    <h1 style="text-align: center;" id="finish"></h1>
     <h3 id="message"></h3>
-    <div class="FormButtons" id = "Form">
+    <div class="FormButtons" id="Form">
         <form action="#">
             <input class="button" id="SubmitButton" type="button" value="Submit">
             <input class="button" id="SkipButton" type="button" value="Correct Answer">
