--- a/Mini-Project.html
+++ b/Mini-Project.html
@@ -5,6 +5,7 @@
     Submitted by: Arsh Jain
     Submitted to: Ajoy Kumar
     Date: November 1, 2020
+    There are 41 questions, and 20 are selected randomly. Varying levels of difficulty.
 -->
 
 
