--- a/Mini-Project.html
+++ b/Mini-Project.html
@@ -4,8 +4,8 @@
     Mini-Project 1 CSIS 3020
     Submitted by: Arsh Jain
     Submitted to: Ajoy Kumar
-    Date: November 1, 2020
-    There are 41 questions, and 20 are selected randomly. Varying levels of difficulty.
+    Date: November 3, 2020
+    There are many questions, and 20 are selected randomly. Varying levels of difficulty.
 -->
 
 
